--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -18,6 +18,7 @@ body{
 	justify-content: center;
 	align-items: center;
 	padding: 20px 100px;
+	
 }
 
 .container:after{
@@ -123,4 +124,24 @@ textarea{
 	.left{
 		height: 200px;
 	}
+}
+
+
+
+/* for madefree customiztions */
+.btn-small{
+	justify-content: center !important;
+	font-size: 10px !important;
+	height: 10px !important;
+	width: 30px !important;
+}
+
+.btn-mid{
+	height: 15px !important;
+	width: 45px !important;
+}
+
+.btn-mid{
+	height: 20px !important;
+	width: 60px !important;
 }
