--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -28,7 +28,7 @@ body{
 	height: 100%;
 	left: 0;
 	top: 0;
-	background: url("../images/wall3.jpg") no-repeat center;
+	/* background: url("../images/wall3.jpg") no-repeat center; */
 	background-size: cover;
 	filter: blur(50px);
 	z-index: -1;
@@ -44,12 +44,12 @@ body{
 	box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
 }
 
-.left{
+/* .left{
 	background: url("../images/wall3.jpg") no-repeat center;
 	background-size: cover;
 	height: 100%;
     
-}
+} */
 
 .right{
 	padding: 25px 40px;
@@ -78,9 +78,9 @@ h2:after{
 	border: 2px solid rgba(0, 0, 0, 0);
 	outline: none;
     color: green;
-	background-color: rgba(230, 230, 230, 0.6);
+	background-color: rgba(105, 101, 101, 0.6);
 	padding: 0.5rem 1rem;
-	font-size: 1.1rem;
+	font-size: 0.9rem;
 	margin-bottom: 22px;
 	transition: .3s;
 }
